desktop header fix color contrast

--- a/style/_header.scss
+++ b/style/_header.scss
@@ -103,7 +103,7 @@
                     text-decoration: none;
                     font-weight: 700;
                     font-size: 1rem;
-                    color: $grayish-violet;
+                    color: #595959;
                     cursor: pointer;
 
                     &:hover {
@@ -112,7 +112,7 @@
                     }
 
                     &.signup_link {
-                        background: $cyan;
+                        background: #1B8383;
                         color: #fff;
                         padding: .5rem 1.25rem;
                         border-radius: 3rem;
